dde-dock-applet: add dock entry
Change-Id: I7f1da41fb8715c7f1331e4fd301645b3f929117e

--- a/in.json/dde.dock.entry.AppletManager.in.json
+++ b/in.json/dde.dock.entry.AppletManager.in.json
@@ -11,7 +11,12 @@
 			"OutFile": "dock-applet-manager",
 			"XMLFile": "dde.dock.entry.AppletManager.xml",
 			"ObjectName": "AppletManager"
+		},
+		{
+			"Interface": "dde.dock.Entry",
+			"OutFile": "dock-entry",
+			"XMLFile": "dde.dock.Entry.xml",
+			"ObjectName": "Entry"
 		}
 	]
 }
-
