debian/rules: rm `in.json/go` and `in.json/qml` at clean phase
Change-Id: I8c6fab43e7d336fc19c906bb68068fb27b59dec8

--- a/debian/rules
+++ b/debian/rules
@@ -21,6 +21,9 @@ QML=usr/lib/$(QML_ARCH)/qt5/qml/
 override_dh_auto_build:
 	cd in.json && python $(CURDIR)/debian/json_build.py && cd ..
 
+override_dh_auto_clean:
+	rm -rf in.json/go in.json/qml
+
 override_dh_auto_install:
 	dh_auto_install 
 	mkdir -p debian/dde-go-dbus-factory
