Add python to build-deps.
Change-Id: Ia902edb7d041bd802406d82aeee0758ffe120524

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: dbus-factory
 Section: devel
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
-Build-Depends: debhelper (>= 8.0.0), golang, go-dlib, dbus-generator, qt5-qmake, qt5-default, qtdeclarative5-dev, libqt5webkit5-dev
+Build-Depends: debhelper (>= 8.0.0), golang, go-dlib, dbus-generator, qt5-qmake, qt5-default, qtdeclarative5-dev, libqt5webkit5-dev, python
 Standards-Version: 3.9.4
 Homepage: http://www.linuxdeepin.com
 
