--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,9 @@ Source: dbus-factory
 Section: devel
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
-Build-Depends: debhelper (>= 8.0.0), golang, go-dlib, dbus-generator, qt5-qmake, qt5-default, qtdeclarative5-dev, libqt5webkit5-dev, python
-Standards-Version: 3.9.4
+Build-Depends: debhelper (>= 9), golang-go, golang-dlib-dev, dbus-generator,
+               qt5-qmake, qt5-default, qtdeclarative5-dev, libqt5webkit5-dev, python
+Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
 Package: dde-go-dbus-factory
