--- a/in.json/com.deepin.dde.Launcher.in.json
+++ b/in.json/com.deepin.dde.Launcher.in.json
@@ -3,15 +3,14 @@
 		"OutputDir": ".",
 		"InputDir": "../xml",
 		"BusType": "Session",
-		"DestName": "com.deepin.dde.launcher"
+		"DestName": "com.deepin.dde.Launcher"
 	},
 	"Interfaces": [
 		{
-			"Interface": "com.deepin.dde.launcher",
+			"Interface": "com.deepin.dde.Launcher",
 			"OutFile": "dde-launcher",
-			"XMLFile": "com.deepin.dde.launcher.xml",
+			"XMLFile": "com.deepin.dde.Launcher.xml",
 			"ObjectName": "Launcher"
 		}
 	]
 }
-
